[project]
name = "coding-crusade"
version = "0.1.0"
description = ""
authors = [
    {name = "Lebouc Yann",email = "yann.leb251@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "coding_crusade", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
