[project]
name = "coding-crusade"
version = "0.1.0"
description = ""
authors = [
    {name = "Lebouc Yann",email = "yann.leb251@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "werkzeug (>=3.1.3,<4.0.0)",
    "psycopg (>=3.2.6,<4.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "coding_crusade", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
